# samp-rec-to-csv

./: CMakeLists.txt  LICENSE  README.md
src/: Converter.cpp  Converter.h  CsvToRec.cpp  RecToCsv.cpp
src/data/: CMakeLists.txt  DataBlock.h  HeaderDataBlock.h  HeaderType.h  OnFootDataBlock.h  PlayerRecordingType.h  VehicleDataBlock.h
src/file/: CMakeLists.txt  CsvFile.cpp  CsvFile.h  File.cpp  File.h  RecFile.cpp  RecFile.h
test/: test.sh
